--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -15,6 +15,7 @@ log = { workspace = true }
 netns-rs = { workspace = true }
 object = { workspace = true }
 rbpf = { workspace = true }
+test-case = { workspace = true }
 tokio = { workspace = true, default-features = false, features = [
     "macros",
     "time",
