--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
 
       - name: Run miri
         run: |
+          set -euxo pipefail
           cargo hack miri test --all-targets --feature-powerset \
             --exclude aya-bpf \
             --exclude aya-bpf-bindings \
@@ -79,6 +80,7 @@ jobs:
 
       - name: Build
         run: |
+          set -euxo pipefail
           cargo hack build --all-targets --feature-powerset \
             --exclude aya-bpf \
             --exclude aya-bpf-bindings \
@@ -90,6 +92,7 @@ jobs:
         env:
           RUST_BACKTRACE: full
         run: |
+          set -euxo pipefail
           cargo hack test --all-targets --feature-powerset \
             --exclude aya-bpf \
             --exclude aya-bpf-bindings \
@@ -122,7 +125,7 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
-      - name: Prereqs
+      - name: bpf-linker
         run: cargo install bpf-linker --git https://github.com/aya-rs/bpf-linker.git
 
       - uses: taiki-e/install-action@cargo-hack
@@ -130,25 +133,70 @@ jobs:
         env:
           CARGO_CFG_BPF_TARGET_ARCH: ${{ matrix.arch }}
         run: |
+          set -euxo pipefail
           cargo hack build --package aya-bpf --package aya-log-ebpf \
             --feature-powerset \
             --target ${{ matrix.target }} \
             -Z build-std=core
 
-  integration-test:
-    runs-on: macos-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        # See https://doc.rust-lang.org/cargo/reference/profiles.html for the names
-        # of the builtin profiles. Note that dev builds "debug" targets.
-        profile:
-          - release
-          - dev
+  build-integration-test:
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          components: rust-src
+
+      - uses: Swatinem/rust-cache@v2
+
+      - name: bpf-linker
+        run: cargo install bpf-linker --git https://github.com/aya-rs/bpf-linker.git
+
+      - name: Install dependencies
+        # ubuntu-22.04 comes with clang 14[0] which doesn't include support for signed and 64bit
+        # enum values which was added in clang 15[1].
+        #
+        # gcc-multilib provides at least <asm/types.h> which is referenced by libbpf.
+        #
+        # llvm provides llvm-objcopy which is used to build the BTF relocation tests.
+        #
+        # [0] https://github.com/actions/runner-images/blob/ubuntu22/20230724.1/images/linux/Ubuntu2204-Readme.md
+        #
+        # [1] https://github.com/llvm/llvm-project/commit/dc1c43d
+        run: |
+          set -euxo pipefail
+          wget -qO- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo tee /etc/apt/trusted.gpg.d/apt.llvm.org.asc
+          echo deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy main | sudo tee /etc/apt/sources.list.d/llvm.list
+          sudo apt-get update
+          sudo apt-get -y install clang gcc-multilib llvm
+
+      - name: Build
+        run: |
+          set -euxo pipefail
+          mkdir -p integration-test-binaries
+          # See https://doc.rust-lang.org/cargo/reference/profiles.html for the
+          # names of the builtin profiles. Note that dev builds "debug" targets.
+          cargo xtask build-integration-test --cargo-arg=--profile=dev | xargs -I % cp % integration-test-binaries/dev
+          cargo xtask build-integration-test --cargo-arg=--profile=release | xargs -I % cp % integration-test-binaries/release
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: integration-test-binaries
+          path: integration-test-binaries
+
+  run-integration-test:
+    runs-on: macos-latest
+    needs: ["build-integration-test"]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          sparse-checkout: |
+            test/run.sh
+            test/cloud-localds
 
       - name: Install Pre-requisites
         run: |
@@ -161,20 +209,25 @@ jobs:
             .tmp/*.qcow2
             .tmp/test_rsa
             .tmp/test_rsa.pub
-          # FIXME: we should invalidate the cache on new bpf-linker releases.
-          # For now we must manually delete the cache when we release a new
-          # bpf-linker version.
           key: tmp-files-${{ hashFiles('test/run.sh') }}
 
+      - uses: actions/download-artifact@v3
+        with:
+          name: integration-test-binaries
+          path: integration-test-binaries
+
       - name: Run integration tests
-        run: test/run.sh --cargo-arg=--profile=${{ matrix.profile }}
+        run: |
+          set -euxo pipefail
+          find integration-test-binaries -type f -exec chmod +x {} \;
+          test/run.sh integration-test-binaries
 
   # Provides a single status check for the entire build workflow.
   # This is used for merge automation, like Mergify, since GH actions
   # has no concept of "when all status checks pass".
   # https://docs.mergify.com/conditions/#validating-all-status-checks
   build-workflow-complete:
-    needs: ["lint", "build-test-aya", "build-test-aya-bpf", "integration-test"]
+    needs: ["lint", "build-test-aya", "build-test-aya-bpf", "run-integration-test"]
     runs-on: ubuntu-latest
     steps:
       - name: Build Complete
