bpf: move rustversion build dep to workspace
All the other dependencies are at the workspace level other than this
one.

--- a/bpf/aya-bpf/Cargo.toml
+++ b/bpf/aya-bpf/Cargo.toml
@@ -10,4 +10,4 @@ aya-bpf-macros = { path = "../../aya-bpf-macros" }
 aya-bpf-bindings = { path = "../aya-bpf-bindings" }
 
 [build-dependencies]
-rustversion = "1.0"
+rustversion = { workspace = true }
