--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,12 @@ jobs:
 
       - name: Check C formatting
         run: git ls-files -- '*.c' '*.h' | xargs clang-format --dry-run --Werror
+      
+      - name: Check Markdown
+        uses: DavidAnson/markdownlint-cli2-action@v9
 
-      - run: taplo fmt --check
+      - name: Check TOML formatting
+        run: taplo fmt --check
 
       - name: Check formatting
         run: cargo fmt --all -- --check
