--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -22,6 +22,7 @@ rbpf = { workspace = true }
 test-case = { workspace = true }
 test-log = { workspace = true, features = ["log"] }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
+xdpilone = { workspace = true }
 
 [build-dependencies]
 cargo_metadata = { workspace = true }
