--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -20,11 +20,7 @@ bytes = { workspace = true }
 lazy_static = { workspace = true }
 libc = { workspace = true }
 log = { workspace = true }
-object = { workspace = true, default-features = false, features = [
-    "elf",
-    "read_core",
-    "std",
-] }
+object = { workspace = true, features = ["elf", "read_core", "std"] }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["rt"], optional = true }
 
