--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,4 @@
-unstable_features = true
-reorder_imports = true
+group_imports = "StdExternalCrate"
 imports_granularity = "Crate"
+reorder_imports = true
+unstable_features = true
