bpf: Handle raw tracepoint arguments
Provide an `arg()` method in `RawTracepointArgs` wrapper of
`bpf_raw_tracepoint_args` and also in `RawTracepointContext`, so
it's directly available in raw tracepoint programs.

The methods and traits implemented here are unsafe. There is no
way to reliably check the number of available arguments, so
requesting a non-existing one leads to undefined behavior.

--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -42,6 +42,10 @@ name = "pass"
 path = "src/pass.rs"
 
 [[bin]]
+name = "raw_tracepoint"
+path = "src/raw_tracepoint.rs"
+
+[[bin]]
 name = "redirect"
 path = "src/redirect.rs"
 
