integration-test: add tc_name_limit_exceeded
This test is to ensure that attaching a tc program that has
a name longer than the maximum allowed length by the kernel
will fail.

Signed-off-by: Mohammad Javad Pooladkhay <m.pooladkhay@gmail.com>

--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -49,6 +49,10 @@ name = "tc_name_limit"
 path = "src/tc_name_limit.rs"
 
 [[bin]]
+name = "tc_name_limit_exceeded"
+path = "src/tc_name_limit_exceeded.rs"
+
+[[bin]]
 name = "redirect"
 path = "src/redirect.rs"
 
