chore: Use the cargo workspace package table
This allows for inheritance of common fields from the workspace root.
The following fields have been made common:

- authors
- license
- repository
- homepage
- edition

Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,13 @@ default-members = [
     # CARGO_CFG_BPF_TARGET_ARCH={x86_64,aarch64,arm,riscv64}
 ]
 
+[workspace.package]
+authors = ["Aya Contributors"]
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/aya-rs/aya"
+homepage = "https://aya-rs.dev"
+edition = "2021"
+
 # NOTE(vadorovsky): Neither cargo-udeps nor cargo-machete are able to detect
 # unused crates defined in this section. It would be nice to teach either of
 # them to do that, but in the meantime we need to be careful.
