--- a/aya-log-parser/Cargo.toml
+++ b/aya-log-parser/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "aya-log-parser"
 version = "0.1.11-dev.0"
-edition = "2021"
+description = "A parser for the aya log format strings"
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+edition.workspace = true
 
 [dependencies]
 aya-log-common = { workspace = true }
