--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "integration-test"
 version = "0.1.0"
-edition = "2021"
 publish = false
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+edition.workspace = true
 
 [dependencies]
 anyhow = { workspace = true, features = ["std"] }
