--- a/aya-log-common/Cargo.toml
+++ b/aya-log-common/Cargo.toml
@@ -3,11 +3,12 @@ name = "aya-log-common"
 version = "0.1.13"
 description = "A logging library for eBPF programs."
 keywords = ["bpf", "ebpf", "log", "logging"]
-license = "MIT OR Apache-2.0"
-authors = ["The Aya Contributors"]
-repository = "https://github.com/aya-rs/aya-log"
 documentation = "https://docs.rs/aya-log"
-edition = "2021"
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+edition.workspace = true
 
 [dependencies]
 num_enum = { workspace = true }
