--- a/aya-log/Cargo.toml
+++ b/aya-log/Cargo.toml
@@ -3,12 +3,13 @@ name = "aya-log"
 version = "0.1.13"
 description = "A logging library for eBPF programs."
 keywords = ["bpf", "ebpf", "log", "logging"]
-license = "MIT OR Apache-2.0"
-authors = ["The Aya Contributors"]
-repository = "https://github.com/aya-rs/aya-log"
 readme = "README.md"
 documentation = "https://docs.rs/aya-log"
-edition = "2021"
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+edition.workspace = true
 
 [dependencies]
 aya = { workspace = true, features = ["async_tokio"] }
