--- a/aya-obj/Cargo.toml
+++ b/aya-obj/Cargo.toml
@@ -3,12 +3,13 @@ name = "aya-obj"
 version = "0.1.0"
 description = "An eBPF object file parsing library with BTF and relocation support."
 keywords = ["bpf", "btf", "ebpf", "elf", "object"]
-license = "MIT OR Apache-2.0"
-authors = ["The Aya Contributors"]
-repository = "https://github.com/aya-rs/aya"
 readme = "README.md"
 documentation = "https://docs.rs/aya-obj"
-edition = "2021"
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+edition.workspace = true
 
 [dependencies]
 bytes = { workspace = true }
