--- a/aya-tool/Cargo.toml
+++ b/aya-tool/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "aya-tool"
 version = "0.1.0"
-authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
-edition = "2021"
+description = "A tool for generating bindings for Linux Kernel types"
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+edition.workspace = true
 
 [dependencies]
 bindgen = { workspace = true, default-features = true }
