--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -3,13 +3,14 @@ name = "aya"
 version = "0.11.0"
 description = "An eBPF library with a focus on developer experience and operability."
 keywords = ["bpf", "ebpf", "kernel", "linux"]
-license = "MIT OR Apache-2.0"
-authors = ["The Aya Contributors"]
-repository = "https://github.com/aya-rs/aya"
 readme = "README.md"
 documentation = "https://docs.rs/aya"
-edition = "2021"
 rust-version = "1.66"
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+edition.workspace = true
 
 [dependencies]
 assert_matches = { workspace = true }
