--- a/bpf/aya-bpf-bindings/Cargo.toml
+++ b/bpf/aya-bpf-bindings/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "aya-bpf-bindings"
 version = "0.1.0"
-authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
-edition = "2021"
+description = "Bindings for Linux Kernel eBPF types and helpers"
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+edition.workspace = true
 
 [dependencies]
 aya-bpf-cty = { path = "../aya-bpf-cty" }
