--- a/aya-log/Cargo.toml
+++ b/aya-log/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aya-log"
-version = "0.1.13"
+version = "0.2.0"
 description = "A logging library for eBPF programs."
 keywords = ["bpf", "ebpf", "log", "logging"]
 readme = "README.md"
@@ -12,7 +12,7 @@ homepage.workspace = true
 edition.workspace = true
 
 [dependencies]
-aya = { path = "../aya", version = "0.11.0", features = ["async_tokio"] }
+aya = { path = "../aya", version = "^0.12.0", features = ["async_tokio"] }
 aya-log-common = { path = "../aya-log-common", version = "0.1.13", default-features = false }
 bytes = { workspace = true }
 log = { workspace = true }
