--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aya"
-version = "0.11.0"
+version = "0.12.0"
 description = "An eBPF library with a focus on developer experience and operability."
 keywords = ["bpf", "ebpf", "kernel", "linux"]
 readme = "README.md"
@@ -15,7 +15,7 @@ edition.workspace = true
 [dependencies]
 assert_matches = { workspace = true }
 async-io = { workspace = true, optional = true }
-aya-obj = { path = "../aya-obj", version = "0.1.0", features = ["std"] }
+aya-obj = { path = "../aya-obj", version = "^0.1.0", features = ["std"] }
 bitflags = { workspace = true }
 bytes = { workspace = true }
 lazy_static = { workspace = true }
