--- a/aya-log/Cargo.toml
+++ b/aya-log/Cargo.toml
@@ -13,7 +13,7 @@ edition.workspace = true
 
 [dependencies]
 aya = { path = "../aya", version = "^0.12.0", features = ["async_tokio"] }
-aya-log-common = { path = "../aya-log-common", version = "0.1.13", default-features = false }
+aya-log-common = { path = "../aya-log-common", version = "^0.1.14", default-features = false }
 bytes = { workspace = true }
 log = { workspace = true }
 thiserror = { workspace = true }
