--- a/aya-log-ebpf-macros/Cargo.toml
+++ b/aya-log-ebpf-macros/Cargo.toml
@@ -9,7 +9,7 @@ homepage.workspace = true
 edition.workspace = true
 
 [dependencies]
-aya-log-common = { path = "../aya-log-common", version = "0.1.13", default-features = false }
+aya-log-common = { path = "../aya-log-common", version = "^0.1.14", default-features = false }
 aya-log-parser = { path = "../aya-log-parser", version = "0.1.13", default-features = false }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
