chore(aya-ebpf-cty): Rename bpf -> ebpf
Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/ebpf/aya-bpf-bindings/Cargo.toml
+++ b/ebpf/aya-bpf-bindings/Cargo.toml
@@ -9,4 +9,4 @@ homepage.workspace = true
 edition.workspace = true
 
 [dependencies]
-aya-bpf-cty = { path = "../aya-bpf-cty" }
+aya-ebpf-cty = { path = "../aya-ebpf-cty" }
