--- a/ebpf/aya-ebpf-cty/Cargo.toml
+++ b/ebpf/aya-ebpf-cty/Cargo.toml
@@ -2,7 +2,7 @@
 categories = ["embedded", "external-ffi-bindings", "no-std"]
 description = "Type aliases to C types like c_int for use with bindgen"
 documentation = "https://docs.rs/aya-bpf-cty"
-name = "aya-bpf-cty"
+name = "aya-ebpf-cty"
 version = "0.2.1"
 authors.workspace = true
 license.workspace = true
