chore(aya-ebpf): Rename bpf -> ebpf
Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ members = [
     "aya-log-ebpf-macros",
 
     # ebpf crates
-    "ebpf/aya-bpf",
+    "ebpf/aya-ebpf",
     "ebpf/aya-ebpf-bindings",
     "ebpf/aya-log-ebpf",
     "test/integration-ebpf",
