--- a/aya-bpf-macros/Cargo.toml
+++ b/aya-bpf-macros/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "aya-bpf-macros"
 version = "0.1.0"
-description = "Proc macros used by aya-bpf"
+description = "Proc macros used by aya-ebpf"
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -18,4 +18,4 @@ quote = { workspace = true }
 syn = { workspace = true, default-features = true, features = ["full"] }
 
 [dev-dependencies]
-aya-bpf = { path = "../ebpf/aya-bpf", version = "0.1.0", default-features = false }
+aya-ebpf = { path = "../ebpf/aya-ebpf", version = "0.1.0", default-features = false }
