--- a/ebpf/aya-ebpf/Cargo.toml
+++ b/ebpf/aya-ebpf/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "aya-bpf"
+name = "aya-ebpf"
 version = "0.1.0"
 description = "A library for writing eBPF programs"
 authors.workspace = true
