chore(aya-ebpf-macros): Rename bpf -> ebpf
Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -52,7 +52,7 @@ pull_request_rules:
 
   - name: add labels for aya-bpf PRs
     conditions:
-      - files~=^(aya-bpf-macros|bpf/aya-bpf(-(cty|bindings))?)/
+      - files~=^(aya-ebpf-macros|bpf/aya-bpf(-(cty|bindings))?)/
     actions:
       label:
         add:
