--- a/ebpf/aya-ebpf/Cargo.toml
+++ b/ebpf/aya-ebpf/Cargo.toml
@@ -10,7 +10,7 @@ edition.workspace = true
 
 [dependencies]
 aya-ebpf-cty = { path = "../aya-ebpf-cty" }
-aya-bpf-macros = { path = "../../aya-bpf-macros" }
+aya-ebpf-macros = { path = "../../aya-ebpf-macros" }
 aya-ebpf-bindings = { path = "../aya-ebpf-bindings" }
 const-assert = { workspace = true, optional = true }
 
