--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
     "xtask",
 
     # macros
-    "aya-bpf-macros",
+    "aya-ebpf-macros",
     "aya-log-ebpf-macros",
 
     # ebpf crates
@@ -35,7 +35,7 @@ default-members = [
     # tests, and that doesn't work unless they've been built with `cargo xtask`.
     "xtask",
 
-    "aya-bpf-macros",
+    "aya-ebpf-macros",
     "aya-log-ebpf-macros",
 
     # ebpf crates are omitted; they must be built with:
