--- a/aya-ebpf-macros/Cargo.toml
+++ b/aya-ebpf-macros/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "aya-bpf-macros"
+name = "aya-ebpf-macros"
 version = "0.1.0"
 description = "Proc macros used by aya-ebpf"
 authors.workspace = true
