--- a/ebpf/aya-ebpf-bindings/Cargo.toml
+++ b/ebpf/aya-ebpf-bindings/Cargo.toml
@@ -9,4 +9,4 @@ homepage.workspace = true
 edition.workspace = true
 
 [dependencies]
-aya-ebpf-cty = { path = "../aya-ebpf-cty" }
+aya-ebpf-cty = { version = "0.2.1", path = "../aya-ebpf-cty" }
