--- a/ebpf/aya-ebpf/Cargo.toml
+++ b/ebpf/aya-ebpf/Cargo.toml
@@ -9,9 +9,9 @@ homepage.workspace = true
 edition.workspace = true
 
 [dependencies]
-aya-ebpf-cty = { path = "../aya-ebpf-cty" }
-aya-ebpf-macros = { path = "../../aya-ebpf-macros" }
-aya-ebpf-bindings = { path = "../aya-ebpf-bindings" }
+aya-ebpf-cty = { version = "0.2.1", path = "../aya-ebpf-cty" }
+aya-ebpf-macros = { version = "0.1.0", path = "../../aya-ebpf-macros" }
+aya-ebpf-bindings = { version = "0.1.0", path = "../aya-ebpf-bindings" }
 const-assert = { workspace = true, optional = true }
 
 [build-dependencies]
